dados nao sincronizados e eventos offline e online

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -25,6 +25,7 @@
                 <a href="#/easyNutri/notificacoes" class="item" menu-close>Notificações
                     <span id="badgeNot" class="badge badge-assertive" style="display: none">{{numeroNot}}</span>
                 </a>
+                <a href="#/easyNutri/dadosNaoSincronizados" class="item" menu-close>Dados</a>
                 <a href="#/easyNutri/definicoes" class="item" menu-close="">Definições</a>
                 <a class="item" ng-click="mostrarConfirmacao()" menu-close>Logout</a>
             </ul>
