--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -23,7 +23,7 @@
                 <a href="#/easyNutri/novaRefeicao" class="item" menu-close>Nova Refeição</a>
                 <a href="#/easyNutri/peso" class="item" menu-close>Registar Peso</a>
                 <a href="#/easyNutri/notificacoes" class="item" menu-close>Notificações
-                    <span id="badgeNot" class="badge badge-assertive" style="display: none">{{numeroNot}}</span>
+                    <span id="badgeNot" class="badge badge-assertive icon ion-chatbox" style="display: none"></span>
                 </a>
                 <a href="#/easyNutri/dadosNaoSincronizados" class="item" menu-close>Dados</a>
                 <a href="#/easyNutri/definicoes" class="item" menu-close="">Definições</a>
