--- a/www/templates/dadosNaoSincronizados.html
+++ b/www/templates/dadosNaoSincronizados.html
@@ -2,7 +2,7 @@
     <ion-header-bar class="bar-positive" align-title="center">
     </ion-header-bar>
     <ion-content>
-        <div>
+        <div id="divLista" style="display: none">
             <ion-list type="list-inset">
                 <div class="item-divider">
                     Refeições Novas
@@ -15,12 +15,11 @@
                         <button class="button button-small button-icon icon ion-trash-a" style="float: right"
                                 ng-click="removerRefeicaoNovaOffline(refeicao)"></button>
                         <button class="button button-small button-icon icon ion-edit" style="float: right"
-                                ng-click="editarRefeicaoOffline(refeicao)"></button>
-
+                                ng-click="editarRefeicaoNovaOffline(refeicao)"></button>
                     </ion-item>
                     <ion-item class="item-accordation item-text-wrap" ng-repeat="linha in refeicao.listaAlimentos"
                               ng-show="isAberto(refeicao)">
-                        {{linha.Nome +' - '+linha.Quantidade + ' ' + findUnidade(linha)}}
+                        {{linha.Nome +' - '+ linha.Quantidade + ' ' + findUnidade(linha)}}
                     </ion-item>
                 </div>
                 <div class="item-divider">
@@ -35,7 +34,6 @@
                                 ng-click="removerRefeicaoEditadaOffline(refeicao)"></button>
                         <button class="button button-small button-icon icon ion-edit" style="float: right"
                                 ng-click="editarRefeicaoOffline(refeicao)"></button>
-
                     </ion-item>
                     <ion-item class="item-accordation item-text-wrap" ng-repeat="linha in refeicao.listaAlimentos"
                               ng-show="isAberto(refeicao)">
