--- a/www/templates/tabelaEquivalencias.html
+++ b/www/templates/tabelaEquivalencias.html
@@ -1,34 +1,22 @@
-<ion-view title="Tabela Equivalências">
-    <ion-header-bar class="bar-positive" align-title="center">
-    </ion-header-bar>
-    <!--<ion-content id="tabela">-->
-        <!--<ion-scroll-->
-        <!--direction="xy"-->
-        <!--paging="false"-->
-        <!--has-bouncing="true"-->
-        <!--scrollbar-x="false"-->
-        <!--scrollbar-y="false"-->
-        <!--zooming="true"-->
-        <!--min-zoom="1"-->
-        <!--max-zoom="10"-->
-        <!--style="width: 100%; height: 100%">-->
-        <!--<div-->
-        <!--class="imageContainer">-->
-        <!--<div id>-->
-    <!--<img id="img" ng-src="img/equivalencias.png">-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</ion-scroll>-->
+<ion-view title="Tabela Equivalências" ng-controller="tabEquiCtrl">
 
-    <ion-content padding="true" scroll="false">
-        <div id="container" style="position:fixed;display:inline;top:0;right:0;bottom:45px;left:0;">
+
+    <ion-content padding="true" scroll="true">
+        <div class="buttons">
+            <button class="button icon ion-plus" ng-click="zoomIn()"></button>
+            <button class="button icon ion-minus" ng-click="zoomOut()"></button>
+        </div>
+
+
+        <div id="container" style="z-index:-1;position:fixed;display:inline-block;top:0px;right:0;bottom:0px;left:0;"
+             ng-style="{'width':larguraCont+'%'}">
+
             <div id="content"
-                 style="position:fixed;display:inline;right:0;left:0;top:0;bottom:45px;-webkit-transform-origin: 0 0;margin-top:45px;">
-                <img src="img/equivalencias.png" zoomable id="image-scrollable">
+                 style="position:fixed;display:inline;right:0;left:0;top:0;bottom:0px;-webkit-transform-origin: 0 0;margin-top:0px;">
+                <img ng-src="img/equivalencias.png" ng-style="{'width':largura+'%'}" zoomable id="image-scrollable">
             </div>
         </div>
 
     </ion-content>
 
-    <!--</ion-content>-->
 </ion-view>
