--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -25,7 +25,7 @@
                 <a href="#/easyNutri/notificacoes" class="item" menu-close>Notificações
                     <span id="badgeNot" class="badge badge-assertive icon ion-chatbox" style="display: none"></span>
                 </a>
-                <a href="#/easyNutri/dadosNaoSincronizados" class="item" menu-close>Dados</a>
+                <a href="#/easyNutri/dadosNaoSincronizados" class="item" menu-close>Dados Não Sincronizados</a>
                 <a href="#/easyNutri/definicoes" class="item" menu-close="">Definições</a>
                 <a class="item" ng-click="mostrarConfirmacao()" menu-close>Logout</a>
             </ul>
