--- a/www/templates/novaRefeicao.html
+++ b/www/templates/novaRefeicao.html
@@ -35,8 +35,8 @@
                 <div id="listaPesquisa" style="display: none">
                     <ion-list type="list-inset">
                         <ion-item ng-bind="alimento.Nome" ng-click="addAlimentoLista(alimento)"
-                                  ng-repeat="alimento in alimentos | filter: pesquisa.alimento | limitTo: numeroAlimentos | orderBy: pesquisa.alimento">
-                            <!--{{alimento.Nome}}-->
+                                  ng-repeat="alimento in alimentos | filtroAlimento:pesquisa.alimento | limitTo: numeroAlimentos | orderBy: pesquisa.alimento">
+                        <!--{{alimento.Nome}}-->
                         </ion-item>
                     </ion-list>
                 </div>
