--- a/www/templates/novaRefeicao.html
+++ b/www/templates/novaRefeicao.html
@@ -17,7 +17,8 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Hora</span>
-                    <input ng-model="refeicao.Hora" type="time">
+                    <input ng-model="refeicao.Hora" type="time" ng-click="opentimeModal()" placeholder="Escolha a hora"
+                           readonly>
                 </label>
 
                 <div class="bar bar-positive">
