hopefully last commit tudo resolvido até o andre e a sofia testarem

--- a/www/templates/dadosNaoSincronizados.html
+++ b/www/templates/dadosNaoSincronizados.html
@@ -2,6 +2,10 @@
     <ion-header-bar class="bar-positive" align-title="center">
     </ion-header-bar>
     <ion-content>
+        <button id="botaoSincronizar" type="submit"
+                class="button button-block button-clear button-positive ion-icon ion-refresh" style="display: none"
+                ng-click="acaoBotao()">Sincronizar Dados
+        </button>
         <div id="divLista" style="display: none">
             <ion-list type="list-inset">
                 <div class="item-divider">
