--- a/www/templates/novaRefeicao.html
+++ b/www/templates/novaRefeicao.html
@@ -18,8 +18,11 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Hora</span>
-                    <input ng-model="refeicao.Hora" type="text" ng-click="openModal(2)" placeholder="Escolha a hora"
-                           readonly>
+                    <input ng-model="refeicao.Hora" type="number" placeholder="Escolha a hora">
+                </label>
+                <label class="item item-input">
+                    <span class="input-label">Minutos</span>
+                    <input ng-model="refeicao.Minutos" type="number" placeholder="Escolha os minutos">
                 </label>
 
                 <div class="bar bar-positive">
