--- a/www/templates/peso.html
+++ b/www/templates/peso.html
@@ -17,7 +17,13 @@
         <div>
             <label class="item item-input">
                 <span class="input-label">Hora</span>
-                <input ng-model="reg.Hora" type="time">
+                <input ng-model="reg.Hora" type="number">
+            </label>
+        </div>
+        <div>
+            <label class="item item-input">
+                <span class="input-label">Minutos</span>
+                <input ng-model="reg.Minutos" type="number">
             </label>
         </div>
         <div class="item item-input-inset">
