--- a/www/templates/timeModal.html
+++ b/www/templates/timeModal.html
@@ -17,6 +17,6 @@
 
             </div>
         </div>
-        <button class="button button-full button-dark" ng-click="closetimeModal(hora, minutos)">Definir</button>
+        <button class="button button-full button-dark" ng-click="closeModal(null, hora, minutos)">Definir</button>
     </ion-content>
 </div>
