--- a/www/templates/datemodal.html
+++ b/www/templates/datemodal.html
@@ -6,6 +6,6 @@
         <div class="padding" style="margin-top:30px;">
             <div pickadate ng-model="myDate"></div>
         </div>
-        <button class="button button-full button-dark" ng-click="closeModal(myDate, null, null)">Definir</button>
+        <button class="button button-full button-dark" ng-click="closeModal(myDate)">Definir</button>
     </ion-content>
 </div>
